assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;1,300&family=Roboto+Slab:wght@300;400;700&display=swap');


body{
    font-family: "Lato",sans-serif;
    padding: 0;
    margin:0;
}

/*-------Header Styles--------*/
#home-header{
    border:none;
}

.header-container{
    border-bottom: 5px solid #ffec00;
}

.h1-container{
    text-align: center;
    padding-right:420px;
    margin-bottom: 20px;
    margin-top: 20px;
    z-index: 5;
}

h1{
    font-family: "Roboto Slab", sans-serif;
    color:#fff;
    letter-spacing: 3px;
    font-weight: bold;
    font-size: 48px;
}

.logo{
     margin:5px auto;
     border-style: none;
     width:100%;
     height:100%;
     max-width: 240px;
     max-height:240px;
     z-index: 5;
}
.nav-holder{
    margin:auto auto;
}


.nav-holder li a{
    color:#fff;
    text-decoration: none;
    font-size: 20px;
    letter-spacing: 2px;
    margin:0 10px;
    font-weight: bold;
    transition: all .5s ease-in-out;
    -moz-transition: all .5s ease-in-out;
    -webkit-transition: all .5s ease-in-out;
}

#dropdown-menu li a
{
    white-space: nowrap;
    color:#0f0f0f;
    text-align: center;
    overflow: scroll;
    transition: all .5s ease-in-out;
    -moz-transition: all .5s ease-in-out;
    -webkit-transition: all .5s ease-in-out;
}

.nav-holder li a:hover, .nav-holder li a:hover:active{
    color:#ffec00;
    border-color:#ffec00;
}

#dropdown-menu li a:hover, #dropdown-menu li a:focus,  #dropdown-menu li a:active
{
    color:#ffec00;
}

.active{
    border-bottom:2px solid #ebebeb;
}

.navbar-toggler-icon{
    margin-top:20px;
    border-style:none;
}

#sign-up-btn{
    
}

/*------------------Home Page Hero image------------------*/
.caroseul-container{
   
    z-index:9;
}

#carouselExampleIndicators{
    margin-top: -250px;
    width:100%;
    max-height:100vh;
}

.carousel-item{
    height:100vh;
}
/* This solution to altering a carousel to dull the image was found at https://stackoverflow.com/questions/44463690/darkening-a-background-image-on-a-bootstrap-carousel */
.carousel-item:after{
     background-color:rgba(0,0,0, 0.4);
     position: absolute;
     top:0;
     bottom:0;
     left:0;
     right:0;
     content:"";
}

.hero-caption{
    margin-bottom: 200px;
}

.hero-caption h5{
    font-weight:bold;
    font-size:32px;
}

/*--------------Testimonails---------------------*/
.testiomnial-container{
    margin: 0 auto;
    }

.testiomnial-container h2{
    font-family: "Roboto Slab", sans-serif;
    text-align: center;
    margin-top:20px;
}

.testimonial-item{
    margin: 15px auto 50px auto;
}

.testimonial-txt{
    text-align: center;
}

.testimonial-img{

}

.testimonial-img img{
    width: 300px;
    height:300px;
    border-radius: 50%;  
}

.testimonial-txt p{
    
}
/*------------------Colours/text----------------*/
.background-color--black{
    background-color: #0f0f0f;
}
.background-color--gold{
    background-color: #ffec00;
}
.background-color--platinum{
    background-color: #ebebeb;
}

.background-color--transparent{
    background: transparent;
}

.uppercase{
    text-transform: uppercase;
}

/*---------------Line Breaks-----------*/
.short-hr{
    width:150px;
    background-color:#fff;
    border-top:none;
    border-bottom: 5px solid #ffec00;
    margin-bottom: 20px;
}

/*------------------Buttons----------------*/
.btn-standard{
    color: #0f0f0f;
    height:40px;
    width:160px;
    border-radius: 26px;
    background-color: #ffec00;
    text-align: center;
    font-weight: bold;
    font-size:20px;
    margin: 0 20px 10px 15px;
    transition: all .5s ease-in-out;
    -moz-transition: all .5s ease-in-out;
    -webkit-transition: all .5s ease-in-out;
    line-height: 25px;
}

.btn-standard:hover,
.btn-standard:active{
    background-color: #ebebeb;
  
}

.btn-hero{
    color: #0f0f0f;
    height:50px;
    width:250px;
    border-radius: 52px;
    background-color: #ffec00;
    text-align: center;
    font-weight: bold;
    font-size:26px;
    margin: 0 auto;
    transition: all .5s ease-in-out;
    -moz-transition: all .5s ease-in-out;
    -webkit-transition: all .5s ease-in-out;
}
/*------------Foooter Styling------------*/

footer{
    }

footer p{
    color: #ebebeb;
    margin-bottom: 0;
    padding-top: 10px;
    padding-bottom: 10px;
}

.footer-item{
    text-align: center;
    font-size: 18px;
    margin: auto auto;
}

.footer-item a{
    text-decoration: none;
    color: #ffec00;
    font-size: 48px;
    padding-left:20px;
    padding-right:20px;
    transition: all .5s ease-in-out;
    -moz-transition: all .5s ease-in-out;
    -webkit-transition: all .5s ease-in-out;
}

.footer-item a:hover,
.footer-item a:active,
.footer-item a:focus{
    color:#ebebeb;
}


.footer-item span{
    vertical-align: super;
    font-size: 50%;
}

.footer-container{
    border-top: 5px solid #ffec00;
}

/*------------------Media--------------------*/
@media only screen and (max-width:1024px){
    .h1-container{
        padding-right:200px;
    }
    
    h1{
        font-size:28px;
        margin: 20px auto;
        padding: 0;
    }

    .nav-holder{
        white-space: nowrap;
        margin-right:150px;
    }
    .nav-holder li a{
        font-size:18px;
    }
    #carouselExampleIndicators{
    width:100%;
    max-height:100vh;
}

.carousel-item{
    height:600px;
}

.testiomnial-container{
    margin:0;
}

 .testimonial-img img{
    width: 200px;
    height:200px;
    border-radius: 50%;  
}

.testimonial-item{
    margin-right:40px;
}
.hero-caption{
    margin-left:30px;
    margin-bottom: 75px;
}
.hero-caption h5{
    font-size: 20px;
}

.btn-hero{
    font-size:14px;
    height:35px;
    width:150px;
}

}

@media only screen and (max-width:768px){
    .h1-container{
        padding-right:180px;
    }
    
    h1{
        font-size:25px;
        margin: 20px auto;
        padding: 0;
    }

    .nav-holder{
        padding-left:5px;
        padding-right: 20px;
        white-space: nowrap;
    }
    .nav-holder li a{
        font-size:16px;
    }
    .carousel-item img{
     height:100%;
}
.logo{
    height:100px;
    width:120px;
    padding-left:20px;
    padding-top:10px;
}
}
@media only screen and (max-width:576px){
  
    
    
    .nav-holder{
        margin-right:0px;
    }
    .footer-item p{
    font-size: 16px; 
    }

    .footer-item a{
    font-size: 32px;
    padding-left:5px;
    padding-right: 5px;
    }

    #carouselExampleIndicators{
        margin-top:0px;
    }

    .carousel-item{
        height:250px;
    }
    #home-header{
        background-color: #0f0f0f;
        border-bottom: 5px solid #ffec00;
    }
   h1{
       font-size: 22px;
       padding:0;
       margin-top:20px;
   }

   .navbar{
       margin-top:-90px;
   }

   .navbar-toggler-icon{
       margin-top:10px;
       border: 1px solid #ebebeb;
   }

   .list-inline-item{
       display: block;
       text-align: right;
       margin: 0 auto;
   }

   .navbar-dark, .navbar-toggler{
       border:none;
   }

   #classes-link{
       margin-right:18px;
   }

    .testimonial-img img{
    width: 150px;
    height:150px;  
    margin-left:95px;
    margin-bottom: 30px;
}

.testimonial-txt p{
    margin-left:30px;
}
.testiomnial-container{
    margin-bottom: -40px;
}
}

